<resources>
    <string name="app_name">My Application</string>
    <string name="activity1">Activity 1</string>
    <string name="to_second">to second</string>
    <string name="activity2">Activity 2</string>
    <string name="to_first">to first</string>
    <string name="to_third">to third</string>
    <string name="activity3">Activity 3</string>
    <string name="to_about">About</string>
    <string name="back">back</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string> />

</resources>